// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tag [snapshot] > accent-bold, lg 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-accent-bold"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > accent-bold, lg, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > accent-bold, md 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-accent-bold"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > accent-bold, md, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > accent-bold, sm 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-accent-bold"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > accent-bold, sm, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > accent-subtle, lg 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-accent-subtle"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > accent-subtle, lg, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > accent-subtle, md 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-accent-subtle"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > accent-subtle, md, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > accent-subtle, sm 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-accent-subtle"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > accent-subtle, sm, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > contrast, lg 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-contrast"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > contrast, lg, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > contrast, md 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-contrast"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > contrast, md, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > contrast, sm 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-contrast"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > contrast, sm, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > danger-bold, lg 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-danger-bold"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > danger-bold, lg, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > danger-bold, md 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-danger-bold"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > danger-bold, md, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > danger-bold, sm 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-danger-bold"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > danger-bold, sm, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > danger-subtle, lg 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-danger-subtle"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > danger-subtle, lg, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > danger-subtle, md 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-danger-subtle"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > danger-subtle, md, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > danger-subtle, sm 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-danger-subtle"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > danger-subtle, sm, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > default, lg 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-default"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > default, lg, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > default, md 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-default"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > default, md, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > default, sm 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-default"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > default, sm, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > info-bold, lg 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-info-bold"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > info-bold, lg, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > info-bold, md 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-info-bold"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > info-bold, md, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > info-bold, sm 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-info-bold"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > info-bold, sm, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > info-subtle, lg 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-info-subtle"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > info-subtle, lg, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > info-subtle, md 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-info-subtle"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > info-subtle, md, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > info-subtle, sm 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-info-subtle"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > info-subtle, sm, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > success-bold, lg 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-success-bold"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > success-bold, lg, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > success-bold, md 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-success-bold"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > success-bold, md, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > success-bold, sm 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-success-bold"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > success-bold, sm, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > success-subtle, lg 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-success-subtle"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > success-subtle, lg, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > success-subtle, md 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-success-subtle"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > success-subtle, md, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > success-subtle, sm 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-success-subtle"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > success-subtle, sm, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > warning-bold, lg 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-warning-bold"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > warning-bold, lg, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > warning-bold, md 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-warning-bold"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > warning-bold, md, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > warning-bold, sm 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-warning-bold"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > warning-bold, sm, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > warning-subtle, lg 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-warning-subtle"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > warning-subtle, lg, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-lg vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > warning-subtle, md 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-warning-subtle"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > warning-subtle, md, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-md vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > warning-subtle, sm 1`] = `
<div
  aria-disabled="false"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-warning-subtle"
>
  Tag Text
</div>
`;

exports[`tag [snapshot] > warning-subtle, sm, disabled 1`] = `
<div
  aria-disabled="true"
  class="vesper-typography vesper-typography-label-xs vesper-tag vesper-tag-sm vesper-tag-disabled"
  disabled=""
>
  Tag Text
</div>
`;
